<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.studentregistrationform.EditActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:text="@string/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/secondNameEdit"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="Name"
            android:visibility="invisible" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/nameEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/secondEmailEdit"
            android:hint="Email"
            android:visibility="invisible" />

        <TextView
            android:text="@string/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailEditText"
            android:layout_toRightOf="@+id/linearLayout"
            android:layout_toEndOf="@+id/linearLayout"
            android:id="@+id/departmentTextView"
            android:visibility="invisible" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/radioGroupEditAct"
            android:visibility="invisible">

            <RadioButton
                android:text="@string/sis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sisRadioButtonEditAct"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/cs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/csRadioButtonEditAct"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bioRadioButtonEditAct"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/othersRadioButtonEditAct"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:text="@string/current_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="5dp"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/moodLinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <SeekBar
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:id="@+id/moodSeekBarEditAct"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekbarResultEditAct"
                android:layout_weight="1"
                android:text="0%"
                android:visibility="invisible" />
        </LinearLayout>

        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:layout_marginTop="20dp"
            android:textSize="14sp" />

    </LinearLayout>
</RelativeLayout>
