<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.studentregistrationform.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEditText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="Name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/nameEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/emailEditText"
            android:hint="Email" />

        <TextView
            android:text="@string/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailEditText"
            android:layout_toRightOf="@+id/linearLayout"
            android:layout_toEndOf="@+id/linearLayout"
            android:id="@+id/departmentTextView" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/sisRadioButton"
            android:layout_marginTop="20dp"
            android:id="@+id/radioGroup">

            <RadioButton
                android:text="@string/sis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sisRadioButton"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/cs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/csRadioButton"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bioRadioButton"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/othersRadioButton"
                android:layout_weight="1" />

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:id="@+id/moodSeekBar"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekbarResult"
                android:layout_weight="1"
                android:text="0%" />
        </LinearLayout>

        <TextView
            android:text="@string/current_mood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="5dp" />

        <Button
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:layout_marginTop="20dp"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>
